--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Data Source Configuration
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/bbrsDb}
 spring.datasource.username=postgres
-spring.datasource.password=root12345
+spring.datasource.password=ANand@123
 
 # Hibernate JPA Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
